# LHI

./: .gitignore  AC88fbd884179b8448f4ec0bab6a263f89 Mixed Compliance Status as of 2026-05-05 17_03 UTC.csv  Phonetic Alphabets.ods  design.md
AI_Prompts/: Lighthouse_AI_system_prompt.txt  knowledge_base.md
HAR authorize-method1/: hotels.cloudbeds.com_Archive [26-05-27 09-20-49].har  (+17 more)
HAR data/: 1  (+7 more)
agent/: .env.example  README.md  aec.py  audio_cache.py  hello_agent.py  inn_info.py  intent_cache.json  intent_cache.py  intent_cache_seed.json  intent_cache_seed_summary.txt  iris_agent.py  iris_prompt.py  kokoro_tts.py  pyproject.toml  sip_ping.py  stt_vocabulary.py
agent/scripts/: kokoro_offline_test.py
backend/: .env.example  .gitignore  README.md  portal_sample_arriving_today.html  portal_sample_departing_today.html  portal_sample_future.html  portal_sample_in_house.html  portal_sample_ota_virtual_card.html  pyproject.toml  setup.bat
backend/app/: config.py  main.py
backend/app/data/: room_preferences.py
backend/app/db/: database.py
backend/app/models/: contact_acknowledgement.py  guest_preference.py  guest_qa.py  pay_by_link.py  pet_declaration.py  portal_token.py  routing_state.py  signature_agreement.py  sms_consent.py  vapi_payloads.py
backend/app/routes/: admin.py  dcs_relay.py  incoming_call.py  iris_dashboard.py  llm.py  portal.py  portal_card.py  sms_signup.py  vapi_tools.py
backend/app/services/: faq_kb.py  faq_llm.py  faq_match.py  faq_throttle.py
backend/app/services/iris_dashboard/: __init__.py  audio_merge.py  auth_password.py  call_categorize.py  call_cost.py  call_index.py  call_processor.py  call_summarizer.py
backend/app/tools/: cloudbeds.py  cloudbeds_browser.py  cloudbeds_dashboard.py  llm_proxy.py  pdf_generator.py  stripe_helper.py  stripe_pay.py  twilio_sms.py  vapi.py
backend/scripts/: card_capture.html  create_setup_intent.py  detect_dtmf_in_ogg.py  discover_charge_selectors.py  discover_paylink_selectors.py  render_portal_sample.py  run_dev.bat  stripe_tokenize_test.html  sync_to_vapi.py  test_add_card_automation.py  test_authorize_or_capture.py  test_booking_id_lookup.py  test_charge_card_by_last4.py  test_cloudbeds_login.py  test_dashboard_save_card.py  test_dump_raw_reservation.py  test_get_reservation.py  test_mint_card_token.py  test_post_credit_card.py  test_post_credit_card_pmid.py  test_ring_ht802.py  test_source_ids.py  test_stripe_pk_tokenize.py
backend/static/iris/: app.js  index.html  style.css
(+105 files in other folders)
