[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reservation-agent-backend"
version = "0.1.0"
description = "Webhook backend for the Lighthouse Inn AI Reservation Agent (Iris)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

# Tell setuptools exactly which folder is the Python package.
# Without this, auto-discovery sees both `app/` and `data/` (the SQLite
# folder) and refuses to build, treating them as two top-level packages.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
